--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,11 @@
     "emitDecoratorMetadata": true,
     "declarationDir": "dist/types",
     "outDir": "dist/es",
+    "noImplicitReturns": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "noImplicitThis": true,
+    "typeRoots": [
     "typeRoots": [
       "node_modules/@types"
     ]
