--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "commit": "git-cz",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "precommit": "lint-staged",
     "postinstall": "ts-node tools/init"
   },
