--- a/.travis.yml
+++ b/.travis.yml
@@ -14,14 +14,18 @@ node_js:
   - node
 before_script:
   - |
-    curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-    chmod +x ./cc-test-reporter
-    ./cc-test-reporter before-build
+    if [ ! -z $CC_TEST_REPORTER_ID ]; then
+      curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+      chmod +x ./cc-test-reporter
+      ./cc-test-reporter before-build
+    fi
 script:
   - npm run test:prod && npm run build
 after_script:
   - |
-    ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+    if [ ! -z $CC_TEST_REPORTER_ID ]; then
+      ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+    fi
 after_success:
   - npm run report-coverage
   - npm run deploy-docs
