--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ cache:
   yarn: true
   directories:
     - node_modules
+plugins:
+  tslint:
+    enabled: true
+    config: tslint.json
 notifications:
   email: false
 node_js:
